# subtitle-downloader

./: LICENSE  README.md  meson.build  subtitle-downloader.desktop  subtitle-downloader.py
assets/: meson.build
data/: io.github.Faugus.subtitle-downloader.desktop  io.github.Faugus.subtitle-downloader.metainfo.xml  io.github.Faugus.subtitledownloader.metainfo.xml  meson.build  subtitle-downloader.metainfo.xml
